# fhsh_naming_system

./: package-lock.json  package.json  rollup.config.js
fhsh shop backend/: main.py  pyproject.toml
fhsh shop backend/router/: admin.py  cart.py  item.py  order.py  products.py  user.py
fhsh_shop/: main.py
fhsh_shop/router/: admin.py  cart.py  item.py  order.py  products.py  user.py
manager/: main.py
namecall/: main.py  pyproject.toml
photo/: main.py  pyproject.toml
project  all/: rxconfig.py
project  all/project class/: project class.py
project check/: rxconfig.py
project check/project check/: project check.py
project class/project class/: project class.py
project log_in/: rxconfig.py
project log_in/project/: project.py
project student/: rxconfig.py
project student/project student/: project student.py
src/: App.vue  api.js  main.js  rollup.config.js  router.js
src/components/: Order.vue  Product.vue  ProductEdit.vue  ProductInput.vue  ProductUser.vue
src/page/: Admin.vue  Create.vue  Edit.vue  FrontPage.vue  Hint.vue  Login.vue  Material.vue  Regist.vue  Reserve.vue  ShopAdmin.vue  ShopUser.vue  ShoppingCart .vue  ShoppingCart.vue
src/最新/: AdminFrontpage.vue  FailedPurchase.vue  Hint.vue  HintMobile.vue  Login-User.vue  Reserve.vue  ShopAdmin.vue  ShopUser.vue  Signup-User.vue  shopping-cart.vue
src/最新/component/: Cart-Product.vue 的副本  Order.vue 的副本  Product.vue 的副本  ProductEdit.vue 的副本  Quantity-plus-minus.vue 的副本
web2/src/: App.vue  main.js  router.js
web2/src/page/: CameraPage.vue
